--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <span class="line line3"></span>
             </div>  
             <a href="https://linyiting11.github.io/konouni.io/"><div class="logo">
-            <img class="fit-picture" src="/img/konouni-logo.png" alt="Konouni logo">
+            <img class="fit-picture" src="img/konouni-logo.png" alt="Konouni logo">
             </div></a>
             <div class="menu-items">
                 <li><a href="https://linyiting11.github.io/konouni.io/" target="_blank">About Me</a></li>
