--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 <div>
                     <ul>
                         <li> •品牌官網改版，完成網頁UIUX設計及前端開發</li>
-                        <li> •兩間銀行信用卡網站UIUX設計，並優化SEO內容</li>
+                        <li> •兩間銀行信用卡行銷網站UIUX設計，並優化SEO內容</li>
                         <li> •熟悉行銷廣宣，與超過30個品牌有線上/下行銷素材合作</li>
                         <li> •為社群帶來高於平均「2倍觸及率」與最高「3倍互動率」</li>
                     </ul>
@@ -119,7 +119,6 @@
                         <li> •品牌官網視覺設計</li>
                         <li> •負責標案主視覺設計及行銷素材</li>
                         <li> •操作客家文化局吉祥物計</li>
-                        <li> •負責標案主視覺設計及行銷素材</li>
                     </ul>
                 </div>
             </div>
@@ -140,7 +139,7 @@
                         <ul>
                             <li> •操作 Figma 設計介面</li>
                             <li> •運用Zeplin與 RD協作</li>
-                            <li> •繪製Mockup進階原型</li>
+                            <li> •Mockup 繪製經驗</li>
                          
                         </ul>
                     </div>
@@ -154,8 +153,8 @@
                     <div>
                         <ul>
                             <li> •使用 HTML、CSS 進行切版</li>
-                            <li> •能製作響應式網站(RWD</li>
-                            <li> •進行相容性除錯優化網頁</li>
+                            <li> •響應式網站製作經驗(RWD)</li>
+                            <li> •網頁優化與改版經驗</li>
                         </ul>
                     </div>
                 </div>
@@ -168,8 +167,8 @@
                     <div>
                         <ul>
                             <li> •使用Ai 及 Ps 製作各式廣宣</li>
-                            <li> •了解品牌識別操作</li>
-                            <li> •吉祥物設計經驗</li>
+                            <li> •了解品牌識別並能維繫一致視覺品質</li>
+                            <li> •操作吉祥物設計</li>
                         </ul>
                     </div>
                 </div>
