--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           <!--job1-->
         　<div class="wrapper">
             <div class="item item-1">
-                <div><h3>2021-Now</h3></div>
+                <div><h3>2021-2023.04</h3></div>
                 <div><h6>視覺/網頁設計師</h6></div>
                 <div><h4>Pi 拍錢包 | PChome</h4></div>
             </div>
