--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
 
         <div class="title_sec">
             <div class="title">
-                <h1>Experience</h1>
-                <h3>Now @ Gogolook | Roo Team as a Brand Designer</h3>
+                <h1>Experience</h1><br>
+                <p>Now @ Gogolook | Roo Team as a Brand Designer</p>
             </div>
             <div class="btn_dl"> 
                 <a href="https://drive.google.com/drive/folders/1nwaOD5KZ6K7k2WGRvRQT2I00zG811jb6?usp=sharing" target="_blank">
