--- a/index.html
+++ b/index.html
@@ -78,7 +78,6 @@
         <div class="title_sec">
             <div class="title">
                 <h1>Experience</h1><br>
-                <p>Now @ Gogolook | Roo Team as a Brand Designer</p>
             </div>
             <div class="btn_dl"> 
                 <a href="https://drive.google.com/drive/folders/1nwaOD5KZ6K7k2WGRvRQT2I00zG811jb6?usp=sharing" target="_blank">
@@ -89,6 +88,9 @@
           <!--job1-->
         　<div class="wrapper">
             <div class="item item-1">
+                <div><h3>2023.06~Now</h3>
+                <div><h6>品牌設計師</h6></div>
+                <div><h4>Gogolook| Roo Team</h4></div>    
                 <div><h3>2021-2023.04</h3></div>
                 <div><h6>視覺/網頁設計師</h6></div>
                 <div><h4>Pi 拍錢包 | PChome</h4></div>
